--- a/RESTFulWCFService/SearchPartener.Master
+++ b/RESTFulWCFService/SearchPartener.Master
@@ -687,7 +687,7 @@
                 document.getElementById('<%= comments.ClientID%>').value = "";
             }
             function resetcForm() {
-               
+
                 document.getElementById('<%= name.ClientID%>').value = "";
                 document.getElementById('<%= email.ClientID%>').value = "";
            <%-- document.getElementById('<%= country.ClientID%>').value = "";
@@ -1082,15 +1082,15 @@
                                                     function change_default_selection(obj) {
                                                         debugger;
                                                         if (obj == 'S') {
-                                                             $('#test1').prop('checked', true).trigger("click");
+                                                            $('#test1').prop('checked', true).trigger("click");
                                                             $("input[name='radio-group'][id='test1']").prop('checked', true);
                                                             $("input[name='radio-group'][id='test2']").prop('checked', false);
-                                                            
+
                                                             $("#tab-1").addClass("current");
                                                             $("#tab-2").removeClass("current");
                                                         }
                                                         if (obj == 'P') {
-                                                             $('#test2').prop('checked', true).trigger("click");
+                                                            $('#test2').prop('checked', true).trigger("click");
                                                             $("input[name='radio-group'][id='test1']").prop('checked', false);
                                                             $("input[name='radio-group'][id='test2']").prop('checked', true);
                                                             $("#tab-2").addClass("current");
@@ -1298,7 +1298,7 @@
                                                 </style>
                                                 <script type="text/javascript">
                                                     $(document).ready(function () {
-                                                       
+
                                                         debugger;
                                                         $('ul.tabs.mycustom-tab li').click(function () {
                                                             debugger;
@@ -1308,7 +1308,7 @@
                                                             $(this).addClass('current');
                                                             $("#" + tab_id).addClass('current');
                                                         });
-                                                       
+
 
                                                         //e.preventDefault();
                                                         //e.stopPropagation();
@@ -1329,10 +1329,12 @@
 
                                                             <p class="scan-the-qr">
                                                                 Scan the Paytm QR code and pay
-                                                                <br />
-                                                                Or<br />
-                                                                Click the Paytm link below and pay
                                                             </p>
+                                                            <p class="for-help">Pay through UPI ID</p>
+<div class="copy-text1">
+				<input type="text" class="text1 pay-poup" value="servicembook@oksbi" />
+				<button onclick="return false;"><i class="fa fa-clone"></i> Copy UPI ID</button>
+</div>
                                                             <%--<p class="for-help"><asp:LinkButton ID="lnkPaymtn" runat="server" target="_blank"></asp:LinkButton></p>--%>
 
                                                         </div>
@@ -1416,8 +1418,14 @@
 
                                                         <div class="scan-forhelp-info-div">
                                                             <p class="scan-the-qr">Scan UPI QR code through your mobile wallet(BHIM, Phonepe, Google Pay-Tez, Mobikwik or other) and pay membership fee.</p>
-                                                            <p class="for-help">for help please email us:</p>
-                                                            <a href="#">info@mymassagepartner.com</a>
+                                                           <%-- <p class="for-help">for help please email us:</p>
+                                                            <a href="#">info@mymassagepartner.com</a>--%>
+                                                            <p class="for-help">Pay through UPI ID</p>
+
+<div class="copy-text">
+    <input type="text" class="text pay-poup" value="servicembook@oksbi" />
+    <button onclick="return false;"><i class="fa fa-clone"></i> Copy UPI ID</button>
+</div>
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-4 pay-via-paytm">
@@ -1542,10 +1550,175 @@ our company bank account via Net banking or cash bank transfer.
 
 
                 });
+                document.querySelector(".copy-text1").querySelector("button").addEventListener("click", function () {
+                    let input = document.querySelector(".copy-text1").querySelector("input.text1");
+                    input.select();
+                    document.execCommand("copy");
+                    document.querySelector(".copy-text1").classList.add("active1");
+                    window.getSelection().removeAllRanges();
+                    setTimeout(function () {
+                        document.querySelector(".copy-text1").classList.remove("active1");
+                    }, 2500);
 
+                    //copyText1 = undefined; // unset
+                    //   delete(copyText1);
+                });
+                document.querySelector(".copy-text").querySelector("button").addEventListener("click", function () {
+                    let input = document.querySelector(".copy-text").querySelector("input.text");
+                    input.select();
+                    document.execCommand("copy");
+                    document.querySelector(".copy-text").classList.add("active");
+                    window.getSelection().removeAllRanges();
+                    setTimeout(function () {
+                        document.querySelector(".copy-text").classList.remove("active");
+                    }, 2500);
+                });
             </script>
+             <style>
+    .copy-text {
+        position: relative;
+        text-align: center;
+    }
 
 
+        .copy-text input.text {
+            padding: 5px 0;
+            font-size: 18px;
+            color: #555;
+            border: none;
+            outline: none;
+            text-align: center;
+            color: black !important;
+            font-size: 14px !important;
+        }
+
+        .copy-text button {
+            margin-top: 6px;
+            padding: 6px;
+            background: unset;
+            color: #0970d5;
+            font-size: 18px;
+            border: none;
+            outline: none;
+            border-radius: 38px;
+            cursor: pointer;
+            text-align: center;
+            font-size: 11px !important;
+            border: 1px solid #ccc;
+            font-weight: 600;
+            margin-bottom: 10px;
+        }
+
+            .copy-text button:active {
+                background: #fff;
+            }
+
+            .copy-text button:before {
+                content: "Copied";
+                position: absolute;
+                bottom: -20px;
+                right: 71px;
+                background: #ebebeb;
+                padding: 4px 10px;
+                border-radius: 3px;
+                font-size: 12px;
+                display: none;
+                font-weight: normal;
+                color: #000000dd;
+            }
+
+            .copy-text button:after {
+                content: "";
+                position: absolute;
+                bottom: 0;
+                right: 52%;
+                width: 10px;
+                height: 10px;
+                display: none;
+                background: #ebebeb;
+                transform: rotate(45deg);
+            }
+
+        .copy-text.active button:before,
+        .copy-text.active button:after {
+            display: block;
+        }
+
+        .copy-text input.text {
+            width: 100%;
+        }
+</style>
+             <style type="text/css">
+                 .copy-text1 {
+                     position: relative;
+                     text-align: center;
+                 }
+
+
+                     .copy-text1 input.text1 {
+                         padding: 5px 0;
+                         font-size: 18px;
+                         color: #555;
+                         border: none;
+                         outline: none;
+                         width: 100%;
+                         text-align: center;
+                         color: black !important;
+                         font-size: 14px !important;
+                     }
+
+                     .copy-text1 button {
+                         margin-top: 6px;
+                         padding: 6px;
+                         background: unset;
+                         color: #0970d5;
+                         font-size: 18px;
+                         border: none;
+                         outline: none;
+                         border-radius: 38px;
+                         cursor: pointer;
+                         text-align: center;
+                         font-size: 11px !important;
+                         border: 1px solid #ccc;
+                         font-weight: 600;
+                         margin-bottom: 10px;
+                     }
+
+                         .copy-text1 button:active1 {
+                             background: #fff;
+                         }
+
+                         .copy-text1 button:before {
+                             content: "Copied";
+                             position: absolute;
+                             bottom: -20px;
+                             right: 71px;
+                             background: #ebebeb;
+                             padding: 4px 10px;
+                             border-radius: 3px;
+                             font-size: 12px;
+                             display: none;
+                             font-weight: normal;
+                             color: #000000dd;
+                         }
+
+                         .copy-text1 button:after {
+                             content: "";
+                             position: absolute;
+                             bottom: 0;
+                             right: 52%;
+                             width: 10px;
+                             height: 10px;
+                             display: none;
+                             background: #ebebeb;
+                             transform: rotate(45deg);
+                         }
+
+                     .copy-text1.active1 button:before,
+                     .copy-text1.active1 button:after {
+                         display: block;
+                     }
+             </style>
 
 
 
@@ -1577,11 +1750,11 @@ our company bank account via Net banking or cash bank transfer.
                         $(this).find('input[type=checkbox]').prop('checked', true);
                         $(this).addClass('active');
                         if ($("#<%= checkboxOneYear_provider.ClientID%>").is(':checked')) { $('.lblyearsub').text("1 Year"); }
-                         else if ($("#<%= checkboxTwoYear_provider.ClientID%>").is(':checked')) { $('.lblyearsub').text("2 Year"); }
-                         else if ($("#<%= checkboxThreeYear_provider.ClientID%>").is(':checked')) { $('.lblyearsub').text("3 Year"); }
-                         else { $('.lblyearsub').text("1 Year"); }
+                        else if ($("#<%= checkboxTwoYear_provider.ClientID%>").is(':checked')) { $('.lblyearsub').text("2 Year"); }
+                        else if ($("#<%= checkboxThreeYear_provider.ClientID%>").is(':checked')) { $('.lblyearsub').text("3 Year"); }
+                        else { $('.lblyearsub').text("1 Year"); }
 
-                     });
+                    });
 
                 });
             </script>
