--- a/RESTFulWCFService/SearchPartener.Master
+++ b/RESTFulWCFService/SearchPartener.Master
@@ -1061,7 +1061,7 @@
                                                 <span class="mobile_title">
                                                     <img src="<%=Constants__.WEB_ROOT_CDN %>/img/icon3_upi.png" /><span>UPI</span></span>
                                             </a></li>
-                                            <li><a href="#Rihanna1">
+                                            <li  style="display:none !important"><a href="#Rihanna1">
                                                 <span class="desk_title">IMPS/Cash Bank transfer</span>
                                                 <span class="mobile_title">
                                                     <img src="<%=Constants__.WEB_ROOT_CDN %>/img/icon4_imps.png" /><span>Bank</span></span>
